Correct word wrap bugs

--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@
 }
 
 .quiz-container {
-  max-width: 1200px;
+  max-width: 900px;
   background-color: #F5F7FB;
   display: flex;
   flex-direction: column;
@@ -113,11 +113,23 @@
   margin-top: 20px;
 }
 
+@media (max-width: 1100px) {
+  .question ul {
+    display: grid;
+    justify-content: center;
+  }
+}
+
 .option {
   font-family: 'Inter', sans-serif;
   font-size: 0.80rem;
   font-weight: 600;
-  padding: 6px 10px;
+  padding: 10px;
+  width: 250px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #293264;
   border: 1px solid #4D5B9E;
   border-radius: 10px;
@@ -136,7 +148,7 @@
 .question::after {
   content: '';
   display: block;
-  width: 500px;
+  width: 100%;
   height: 1px;
   background-color: #DBDEF0;
   margin: 30px 0;
